# pythonProject4

./: main.py  pyproject.toml  settings.py
src/: api_vacancy_website.py  parser.py  utils.py  vacancy.py
src/data/: vacancies.json
tests/: conftest.py  test_parser.py
