[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Alexandra Mescheryakowa <sokolovamarina2525@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

git rm --cached .idea/ -r
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
